css/main.css
:root {
    --main-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    --main-blue-color: #0098ff;
    --secondary-blue-color: #0066aa; 
    --main-orange-color: #FF6700;
    --main-text-color: rgb(250, 250, 250);
}
*{
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    color: var(--main-text-color);
}
.body {
    font-family: var(--main-font-family);
    min-width: 200px;
}
.nav {
    background: var(--main-blue-color);
    color: var(--main-text-color);
    width: 100%;
    height: 50px;
}
.logo {
    font-size: 25px;
    font-weight: 500;
    line-height: 45px;
    padding: 0px 10px;
    text-wrap: nowrap;
}
.navbar-list {
    float: right;
    margin-right: 20px;
}
.navbar-item {
    display: inline-block;
    line-height: 45px;
    margin: 0px 5px;
}
.navbar-item a{
    color: var(--main-text-color);
    font-size: 17px;
    padding: 5px;
    text-transform: capitalize;
}
.active-link, .navbar-item a:hover {
    background: var(--main-orange-color);
    border-radius: 5px;
    transition: all .2s ease;
}
#nav-checkbox{
    display: none;
}
.checkBtn {
    display: none;
    font-size: 30px;
    float: right;
    line-height: 45px;
    margin-right: 10px;
    cursor: pointer;
}
.page-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-image: url(../images/homepage-bg.avif);
    background-repeat: no-repeat;
    background-size: cover;
    overflow: none;
}

@media (max-width: 952px) {
    .logo {
        font-size: 20px;
        line-height: 50px;
    }
    .navbar-item a {
        font-size: 13px;
        font-weight: 500;
    }
}
@media (max-width: 558px) {
    .checkBtn {
        display: block;
    }
    .navbar-list {
        position: fixed;
        width: 100%;
        height: 100vh;
        background-color: var(--secondary-blue-color);
        top: 50px;
        left: -100%;
        text-align: center;
        transition: all 0.5s ease-in-out;
    }
    .navbar-item {
        display: block;
        margin: 50px 0px;
        line-height: 30px;
    }
    #nav-checkbox:checked ~ .navbar-list {
        left: 0;
    }
}

